--- a/MySugarTracker/MySugarTracker.csproj
+++ b/MySugarTracker/MySugarTracker.csproj
@@ -196,18 +196,27 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
-    <Compile Include="Controllers\UsersController.cs" />
-    <Compile Include="DAL\SugarContext.cs" />
-    <Compile Include="DAL\SugarInitializer.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505061430467_InitialCreate.cs" />
+    <Compile Include="Migrations\201505061430467_InitialCreate.Designer.cs">
+      <DependentUpon>201505061430467_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505061748048_second.cs" />
+    <Compile Include="Migrations\201505061748048_second.Designer.cs">
+      <DependentUpon>201505061748048_second.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505061830558_third.cs" />
+    <Compile Include="Migrations\201505061830558_third.Designer.cs">
+      <DependentUpon>201505061830558_third.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\Patient.cs" />
     <Compile Include="Models\PatientSugarData.cs" />
-    <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -310,6 +319,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="DAL\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
@@ -317,6 +327,17 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201505061430467_InitialCreate.resx">
+      <DependentUpon>201505061430467_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505061748048_second.resx">
+      <DependentUpon>201505061748048_second.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505061830558_third.resx">
+      <DependentUpon>201505061830558_third.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
