--- a/MySugarTracker/packages.config
+++ b/MySugarTracker/packages.config
@@ -37,5 +37,9 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="RestSharp" version="105.0.1" targetFramework="net45" />
+  <package id="Twilio" version="4.0.0" targetFramework="net45" />
+  <package id="Twilio.Mvc" version="3.1.15" targetFramework="net45" />
+  <package id="Twilio.TwiML" version="3.3.6" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
