--- a/MySugarTracker/MySugarTracker.csproj
+++ b/MySugarTracker/MySugarTracker.csproj
@@ -224,6 +224,10 @@
     <Compile Include="Migrations\201505061830558_third.Designer.cs">
       <DependentUpon>201505061830558_third.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505071413081_fourth.cs" />
+    <Compile Include="Migrations\201505071413081_fourth.Designer.cs">
+      <DependentUpon>201505071413081_fourth.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -355,6 +359,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505061830558_third.resx">
       <DependentUpon>201505061830558_third.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505071413081_fourth.resx">
+      <DependentUpon>201505071413081_fourth.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
