--- a/MySugarTracker/MySugarTracker.csproj
+++ b/MySugarTracker/MySugarTracker.csproj
@@ -236,6 +236,7 @@
     <Compile Include="Models\PatientSugarData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\PatientUser.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
