Added sugar data screens

--- a/MySugarTracker/MySugarTracker.csproj
+++ b/MySugarTracker/MySugarTracker.csproj
@@ -226,9 +226,13 @@
     <Compile Include="Migrations\201505061830558_third.Designer.cs">
       <DependentUpon>201505061830558_third.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201505071413081_fourth.cs" />
-    <Compile Include="Migrations\201505071413081_fourth.Designer.cs">
-      <DependentUpon>201505071413081_fourth.cs</DependentUpon>
+    <Compile Include="Migrations\201505082047138_sugardata.cs" />
+    <Compile Include="Migrations\201505082047138_sugardata.Designer.cs">
+      <DependentUpon>201505082047138_sugardata.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201505082057214_sugarKey.cs" />
+    <Compile Include="Migrations\201505082057214_sugarKey.Designer.cs">
+      <DependentUpon>201505082057214_sugarKey.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -371,8 +375,11 @@
     <EmbeddedResource Include="Migrations\201505061830558_third.resx">
       <DependentUpon>201505061830558_third.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201505071413081_fourth.resx">
-      <DependentUpon>201505071413081_fourth.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201505082047138_sugardata.resx">
+      <DependentUpon>201505082047138_sugardata.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505082057214_sugarKey.resx">
+      <DependentUpon>201505082057214_sugarKey.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
