--- a/MySugarTracker/MySugarTracker.csproj
+++ b/MySugarTracker/MySugarTracker.csproj
@@ -206,6 +206,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\DoctorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\PatientsController.cs" />
@@ -234,10 +235,6 @@
     <Compile Include="Migrations\201505082057214_sugarKey.Designer.cs">
       <DependentUpon>201505082057214_sugarKey.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201505111305183_monday.cs" />
-    <Compile Include="Migrations\201505111305183_monday.Designer.cs">
-      <DependentUpon>201505111305183_monday.cs</DependentUpon>
-    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
@@ -248,6 +245,7 @@
     <Compile Include="Models\SugarGraph.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\DoctorUser.cs" />
     <Compile Include="ViewModels\PatientUser.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -356,6 +354,11 @@
     <Content Include="Views\PatientSugarDatas\Details.cshtml" />
     <Content Include="Views\PatientSugarDatas\Edit.cshtml" />
     <Content Include="Views\PatientSugarDatas\Index.cshtml" />
+    <Content Include="Views\Doctor\Create.cshtml" />
+    <Content Include="Views\Doctor\Delete.cshtml" />
+    <Content Include="Views\Doctor\Details.cshtml" />
+    <Content Include="Views\Doctor\Edit.cshtml" />
+    <Content Include="Views\Doctor\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -384,9 +387,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505082057214_sugarKey.resx">
       <DependentUpon>201505082057214_sugarKey.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201505111305183_monday.resx">
-      <DependentUpon>201505111305183_monday.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
